[gd_scene load_steps=17 format=2]

[ext_resource path="res://characters/CharacterPuppet.gd" type="Script" id=1]
[ext_resource path="res://utils/DialogPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/characters/spr_scientist_talking.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/spr_scientist_running.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/spr_scientist_idle.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "talk",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="CharacterPuppet" type="Node2D"]
script = ExtResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pivot"]
position = Vector2( -1, -16 )
frames = SubResource( 11 )
animation = "idle"
speed_scale = 2.0

[node name="C" type="CanvasLayer" parent="."]

[node name="DialogPlayer" parent="C" instance=ExtResource( 2 )]

[connection signal="dialog_finished" from="C/DialogPlayer" to="." method="_on_DialogPlayer_dialog_finished"]
